Add service layer and update controllers to use it